--- a/.github/workflows/jenkins-signal.yml
+++ b/.github/workflows/jenkins-signal.yml
@@ -30,7 +30,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Post a signal to Jenkins URL
         #run: curl -i -X POST https://andromedabay.ddns.net/jenkins/github-webhook/?url=https://github.com/hammadrauf/maraiadb-docker.git      
-        run: curl -i -X POST https://andromedabay.ddns.net/jenkins/github-webhook
+        run: curl -i -X POST -F 'url=https://github.com/hammadrauf/maraiadb-docker.git' https://andromedabay.ddns.net/jenkins/github-webhook
         
       - name: Echo Message Signal Posted
         run: echo Jenkins signal sent.
