--- a/.github/workflows/jenkins-signal.yml
+++ b/.github/workflows/jenkins-signal.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Send Jenkins Signal to Build and Push build to Dockerhub 
 
 # Controls when the workflow will run
 on:
